--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "babel-register": "^6.13.0",
     "bcryptjs": "^2.4.0",
     "co": "^4.4.0",
-    "couchbase": "^2.2.4",
     "credential": "^1.0.0",
     "css-loader": "0.14.5",
     "dotenv": "~2.0.0",
@@ -79,7 +78,7 @@
     "koa-better-body": "^3.0.0",
     "koa-compress": "^1.0.0",
     "koa-generic-session": "^1.11.4",
-    "koa-generic-session-couchbase": "0.0.1",
+    "koa-generic-session-sequelize": "^1.0.7",
     "koa-logger": "~1.3.0",
     "koa-onerror": "^2.0.0",
     "koa-router": "^5.4.0",
@@ -89,7 +88,8 @@
     "marko": "^3.10.1",
     "node-sass": "^3.10.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ottoman": "^1.0.4",
+    "pg": "^6.1.2",
+    "pg-hstore": "^2.3.2",
     "postcss-loader": "^0.13.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
@@ -100,6 +100,7 @@
     "redux-thunk": "~2.1.0",
     "require-hacker": "~2.1.4",
     "sass-loader": "^3.2.0",
+    "sequelize": "^3.27.0",
     "style-loader": "~0.13.1",
     "svg-sprite-loader": "0.0.27",
     "url-loader": "^0.5.0",
