--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "require-hacker": "~2.1.4",
     "sass-loader": "^3.2.0",
     "sequelize": "^3.27.0",
+    "sequelize-cli": "^2.5.1",
     "style-loader": "~0.13.1",
     "svg-sprite-loader": "0.0.27",
     "url-loader": "^0.5.0",
